# doe

./: .gitignore  Cargo.toml  README.md  Tisdag kväll.md
docs/: dynamic-documents.md  wasm-plugins.md
src/: app.rs  main.rs
src/ai/: anthropic.rs  config.rs  http.rs  mod.rs  openai.rs  presets.rs  sse.rs
src/commands/: mod.rs  palette.rs  registry.rs
src/config/: callouts.rs  mod.rs  obsidian.rs  theme.rs
src/editor/: buffer.rs  cursor.rs  mod.rs  selection.rs  tabstops.rs  undo.rs
src/eval/: block.rs  lua.rs  mod.rs  trust.rs
src/files/: mod.rs  picker.rs  positions.rs  recovery.rs
src/input/: keymap.rs  mod.rs  mouse.rs
src/plugins/: api.rs  builtins.rs  mod.rs  registry.rs  wasm.rs
src/search/: find.rs  mod.rs
src/syntax/: cache.rs  code.rs  highlighter.rs  markdown.rs  mod.rs  structure.rs  treesitter.rs
src/ui/: ai_panel.rs  callouts.rs  commandline.rs  file_picker.rs  help.rs  layout.rs  mod.rs  modal.rs  overlay.rs  palette.rs  renderer.rs  screen.rs  settings.rs  statusbar.rs  symbols.rs  wrap.rs
