[package]
name = "doe"
version = "0.2.0"
edition = "2021"
description = "DOE - David's Own Editor: a fast, memory-safe terminal text editor"
license = "MIT"

[[bin]]
name = "doe"
path = "src/main.rs"

[dependencies]
crossterm = "0.28"
ropey = "1.6"
anyhow = "1"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
dirs = "5"
tree-sitter = "0.26.9"
tree-sitter-rust = "0.24.2"
streaming-iterator = "0.1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
