[package]
name = "doe"
version = "0.3.0"
edition = "2021"
description = "DOE - David's Own Editor: a fast, memory-safe terminal text editor"
license = "MIT"

[[bin]]
name = "doe"
path = "src/main.rs"

[dependencies]
crossterm = "0.28"
ropey = "1.6"
anyhow = "1"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
dirs = "5"
tree-sitter = "0.26.9"
tree-sitter-rust = "0.24.2"
streaming-iterator = "0.1"
tree-sitter-python = "0.25.0"
tree-sitter-javascript = "0.25.0"
tree-sitter-typescript = "0.23.2"
tree-sitter-json = "0.24.8"
tree-sitter-css = "0.25.0"
tree-sitter-html = "0.23.2"
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls", "json"] }
wasmi = "1.1.0"
mlua = { version = "0.11.6", features = ["lua54", "vendored"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[dev-dependencies]
wat = "1.252.0"
